Prevent distortion of image

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
 
 #gif {
   max-width: min(400px, 90%);
+  object-fit: contain;
 }
 
 p {
